# starknet-rs

./: .gitignore  .gitmodules  BENCHMARK.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
examples/starknet-cxx/: CMakeLists.txt  README.md  main.cpp
examples/starknet-cxx/starknet-cxx/: CMakeLists.txt  Cargo.toml
examples/starknet-cxx/starknet-cxx/src/: lib.rs
examples/starknet-wasm/: .gitignore  Cargo.toml  README.md  index.html  index.js  package.json  webpack.config.js
examples/starknet-wasm/src/: lib.rs
starknet-accounts/: Cargo.toml  README.md  test-data
starknet-accounts/src/: account.rs  call.rs  lib.rs  single_owner.rs
starknet-accounts/src/account/: declaration.rs  execution.rs  mod.rs
starknet-accounts/src/factory/: argent.rs  braavos.rs  mod.rs  open_zeppelin.rs
starknet-accounts/tests/: ledger.rs  single_owner_account.rs
starknet-contract/: Cargo.toml  README.md  test-data
starknet-contract/src/: artifact.rs  factory.rs  lib.rs
starknet-contract/src/abi/: mod.rs
starknet-contract/src/abi/cairo_types/: error.rs  mod.rs
starknet-contract/src/abi/parser/: cairo_enum.rs  cairo_event.rs  cairo_function.rs  cairo_struct.rs  mod.rs
starknet-contract/test-data/: generate_artifacts.sh  oz_account_artifact.txt
starknet-contract/test-data/contracts/: OzAccount.cairo
starknet-contract/tests/: contract_deployment.rs
starknet-core/: Cargo.toml  README.md
starknet-core-derive/: Cargo.toml  README.md
starknet-core-derive/src/: lib.rs
starknet-core/benches/: cairo0_class_hash.rs  class_hash.rs  sierra_class_hash.rs
starknet-core/src/: chain_id.rs  codec.rs  crypto.rs  decoder.rs  lib.rs  serde.rs  utils.rs  with_std.rs  without_std.rs
starknet-core/src/crypto/: mod.rs  pedersen_hash.rs
starknet-core/src/serde/: byte_array.rs  mod.rs  num_hex.rs  u64.rs  unsigned_field_element.rs
starknet-core/src/serde/json/: mod.rs
starknet-core/src/types/: block.rs  byte_array.rs  bytes31.rs  bytes_31.rs  call.rs  call_contract.rs  codegen.rs  contract_addresses.rs  contract_artifact.rs  contract_code.rs  conversions.rs  error.rs  eth_address.rs  execution_result.rs  fee.rs  hash_256.rs  message_status.rs  messaging.rs  mod.rs  msg.rs  receipt_block.rs  requests.rs  serde_impls.rs  starknet_error.rs  state_update.rs  trace.rs  transaction.rs  transaction_receipt.rs  transaction_request.rs  u256.rs
starknet-core/src/types/contract/: legacy.rs  mod.rs
starknet-core/src/types/field_element/: mod.rs  unsigned.rs
starknet-core/src/types/test-data/: address.json  hash_256.json
starknet-core/src/types/typed_data/: domain.rs  encoder.rs  error.rs  hasher.rs  mod.rs  revision.rs  shortstring.rs  type_definition.rs  type_reference.rs  types.rs  value.rs
starknet-core/test-data/contracts/: docker_entry.sh  generate_artifacts.sh
starknet-core/test-data/contracts/artifacts/: deployable.hashes.json  deployable.txt  erc20_compiled.txt  event_example.hashes.json  event_example.txt  oz_account.hashes.json  oz_account.txt
starknet-core/test-data/contracts/cairo0/: docker_entry.sh  generate_artifacts.sh
starknet-core/test-data/contracts/cairo1/: docker_entry.sh  docker_entry_compiled_hashes.sh  generate_artifacts.sh
starknet-core/test-data/contracts/cairo2/: docker_entry_compile.sh  docker_entry_hashes.sh  generate_artifacts.sh
starknet-core/test-data/contracts/cairo2.6/: docker_entry_compile.sh  docker_entry_hashes.sh  generate_artifacts.sh
starknet-core/test-data/contracts/contracts/: EventExample.cairo
starknet-core/test-data/contracts/ledger-app/: nanox_2.4.2_2.3.1_sdk_v22.10.0
starknet-core/test-data/contracts/scripts/: generate_hashes.py
starknet-core/test-data/raw_gateway_responses/: generate_responses.sh
starknet-core/test-data/serde/: broadcasted_invoke_v1_non_query.json  broadcasted_invoke_v1_query.json
starknet-crypto/: Cargo.toml  README.md
starknet-crypto-codegen/: Cargo.toml  README.md
starknet-crypto-codegen/src/: lib.rs  pedersen.rs
starknet-crypto-codegen/src/poseidon/: mod.rs  params.rs
starknet-crypto/benches/: ecdsa_get_public_key.rs  ecdsa_recover.rs  ecdsa_sign.rs  ecdsa_verify.rs  pedersen_hash.rs  poseidon_hash.rs  rfc6979_generate_k.rs
starknet-crypto/src/: ec_point.rs  ecdsa.rs  error.rs  fe_utils.rs  field_element.rs  lib.rs  pedersen_hash.rs  pedersen_params.rs  pedersen_points.rs  poseidon_hash.rs  rfc6979.rs  rustc-ice-2024-03-10T16_44_33-12135.txt  test_utils.rs  without_std.rs
starknet-crypto/src/field_element/: fr.rs  mod.rs
starknet-crypto/src/pedersen_hash/: default.rs  mod.rs  no_lookup.rs
starknet-crypto/test-data/: keys_precomputed.json  rfc6979_not_padded.json  rfc6979_padded.json
starknet-curve/: Cargo.toml  README.md
starknet-curve/src/: curve_params.rs  ec_point.rs  lib.rs
starknet-ff/: Cargo.toml  README.md
starknet-ff/src/: fr.rs  lib.rs  with_std.rs  without_std.rs
starknet-id/: Cargo.toml
starknet-id/src/: encoding.rs  lib.rs  naming.rs
starknet-id/tests/: encoding.rs  naming.rs
starknet-macros/: Cargo.toml  README.md
starknet-macros/src/: lib.rs
starknet-macros/src/abigen/: contract_abi.rs  mod.rs
starknet-macros/src/abigen/expand/: contract.rs  enum.rs  (+6 more)
starknet-providers/: Cargo.toml  README.md  test-data
starknet-providers/src/: any.rs  lib.rs  provider.rs  sequencer_gateway.rs
starknet-providers/src/jsonrpc/: mod.rs  provider.rs
starknet-providers/src/sequencer/: mod.rs  provider.rs
starknet-providers/test-data/: contracts  raw_gateway_responses
starknet-providers/test-data/serde/: sequencer_error_invalid_contract_class.json
starknet-providers/tests/: jsonrpc.rs  mock.rs  models.rs  sequencer_goerli.rs  sequencer_mainnet.rs
starknet-signers/: Cargo.toml  README.md
starknet-signers/src/: key_pair.rs  ledger.rs  lib.rs  local_wallet.rs  signer.rs
starknet-signers/tests/: ledger.rs
starknet-tokio-tungstenite/: Cargo.toml  README.md
starknet-tokio-tungstenite/src/: error.rs  lib.rs  subscription.rs
starknet-tokio-tungstenite/src/stream/: mod.rs  read.rs  write.rs
starknet-tokio-tungstenite/tests/: websocket.rs
(+195 files in other folders)
