[package]
name = "starknet"
version = "0.2.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/starknet"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Complete StarkNet library in Rust
"""
keywords = ["ethereum", "starknet", "web3"]
exclude = [".github/**", "images/**"]

[workspace]
members = [
    "starknet-core",
    "starknet-providers",
    "starknet-contract",
    "starknet-crypto",
    "starknet-signers",
    "starknet-accounts",
    "starknet-ff",
    "starknet-macros",
    "examples/starknet-wasm",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-core = { version = "0.2.0", path = "./starknet-core", default-features = false }
starknet-providers = { version = "0.2.0", path = "./starknet-providers" }
starknet-contract = { version = "0.1.0", path = "./starknet-contract" }
starknet-signers = { version = "0.1.0", path = "./starknet-signers" }
starknet-accounts = { version = "0.1.0", path = "./starknet-accounts" }
starknet-macros = { version = "0.1.0", path = "./starknet-macros" }

[dev-dependencies]
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"

[features]
default = ["bigdecimal"]
bigdecimal = ["starknet-core/bigdecimal"]
