[package]
name = "starknet"
version = "0.7.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/starknet"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Complete Starknet library in Rust™
"""
keywords = ["ethereum", "starknet", "web3"]
exclude = [".github/**", "images/**"]

[workspace]
members = [
    "starknet-core",
    "starknet-providers",
    "starknet-contract",
    "starknet-crypto",
    "starknet-signers",
    "starknet-accounts",
    "starknet-ff",
    "starknet-macros",
    "starknet-curve",
    "starknet-crypto-codegen",
    "examples/starknet-wasm",
    "examples/starknet-cxx/starknet-cxx",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-ff = { version = "0.3.5", path = "./starknet-ff", default-features = false }
starknet-crypto = { version = "0.6.1", path = "./starknet-crypto" }
starknet-core = { version = "0.7.2", path = "./starknet-core", default-features = false }
starknet-providers = { version = "0.7.0", path = "./starknet-providers" }
starknet-contract = { version = "0.6.0", path = "./starknet-contract" }
starknet-signers = { version = "0.5.0", path = "./starknet-signers" }
starknet-accounts = { version = "0.6.0", path = "./starknet-accounts" }
starknet-macros = { version = "0.1.4", path = "./starknet-macros" }

[dev-dependencies]
serde_json = "1.0.74"
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"

[features]
default = ["bigdecimal"]
bigdecimal = ["starknet-ff/bigdecimal"]
no_unknown_fields = [
    "starknet-core/no_unknown_fields",
    "starknet-providers/no_unknown_fields",
]
