[package]
name = "starknet"
version = "0.13.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
documentation = "https://docs.rs/starknet"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Complete Starknet library in Rust™
"""
keywords = ["ethereum", "starknet", "web3"]
exclude = [".github/**", "images/**"]

[workspace]
members = [
    "starknet-core",
    "starknet-core-derive",
    "starknet-providers",
    "starknet-contract",
    "starknet-crypto",
    "starknet-signers",
    "starknet-accounts",
    "starknet-macros",
    "starknet-curve",
    "examples/starknet-wasm",
    "examples/starknet-cxx/starknet-cxx",
]

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-crypto = { version = "0.7.4", path = "./starknet-crypto" }
starknet-core = { version = "0.12.3", path = "./starknet-core", default-features = false }
starknet-core-derive = { version = "0.1.0", path = "./starknet-core-derive", features = ["import_from_starknet"] }
starknet-providers = { version = "0.12.1", path = "./starknet-providers" }
starknet-contract = { version = "0.12.0", path = "./starknet-contract" }
starknet-signers = { version = "0.10.2", path = "./starknet-signers" }
starknet-accounts = { version = "0.12.0", path = "./starknet-accounts" }
starknet-macros = { version = "0.2.1", path = "./starknet-macros" }

[dev-dependencies]
serde_json = "1.0.74"
starknet-signers = { version = "0.10.2", path = "./starknet-signers", features = ["ledger"] }
tokio = { version = "1.15.0", features = ["full"] }
url = "2.2.2"

[features]
default = []
ledger = ["starknet-signers/ledger"]
no_unknown_fields = [
    "starknet-core/no_unknown_fields",
    "starknet-providers/no_unknown_fields",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "allow"
rust.unreachable_pub = "allow"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"
use_self = "warn"
missing_const_for_fn = "warn"
empty_line_after_doc_comments = "warn"
iter_on_single_items = "warn"
match_same_arms = "warn"
doc_markdown = "warn"
unnecessary_struct_initialization = "warn"
string_lit_as_bytes = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
type_repetition_in_bounds = "allow"
manual_string_new = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
zero_sized_map_values = "warn"
single_char_pattern = "warn"
needless_continue = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
