[package]
name = "starknet-accounts"
version = "0.6.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Types for handling Starknet account abstraction
"""
keywords = ["ethereum", "starknet", "web3"]
exclude = ["test-data/**"]

[dependencies]
starknet-core = { version = "0.7.2", path = "../starknet-core" }
starknet-providers = { version = "0.7.0", path = "../starknet-providers" }
starknet-signers = { version = "0.5.0", path = "../starknet-signers" }
async-trait = "0.1.68"
auto_impl = "1.0.1"
thiserror = "1.0.40"

[dev-dependencies]
rand = { version = "0.8.5", features=["std_rng"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
