[package]
name = "starknet-accounts"
version = "0.11.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Types for handling Starknet account abstraction
"""
keywords = ["ethereum", "starknet", "web3"]
exclude = ["test-data/**"]

[dependencies]
starknet-core = { version = "0.12", path = "../starknet-core" }
starknet-crypto = { version = "0.7", path = "../starknet-crypto" }
starknet-providers = { version = "0.12", path = "../starknet-providers" }
starknet-signers = { version = "0.10", path = "../starknet-signers" }
async-trait = "0.1"
auto_impl = "1.2"
thiserror = "1.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
url = "2.5"

[lints]
workspace = true
