[package]
name = "starknet-contract"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Types and utilities for StarkNet smart contract deployment and interaction
"""
keywords = ["ethereum", "starknet", "web3"]

[dependencies]
starknet-core = { version = "0.2.0", path = "../starknet-core" }
starknet-providers = { version = "0.2.0", path = "../starknet-providers" }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.74"
serde_with = "1.12.0"
thiserror = "1.0.30"
rand = { version = "0.8.5", features=["std_rng"] }

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
