[package]
name = "starknet-contract"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Types and utilities for Starknet smart contract deployment and interaction
"""
keywords = ["ethereum", "starknet", "web3"]

[dependencies]
starknet-core = { version = "0.2.0", path = "../starknet-core" }
starknet-providers = { version = "0.2.0", path = "../starknet-providers" }
starknet-accounts = { version = "0.1.0", path = "../starknet-accounts" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.74"
serde_with = "2.2.0"
thiserror = "1.0.30"
no-std-compat = { version = "0.4.1", features = [
    "alloc",
    "compat_macros",
    "std",
] }
[features]
default = [ "std" ] # Default to using the std
std = [ "no-std-compat/std" ]

[dev-dependencies]
rand = { version = "0.8.5", features=["std_rng"] }
starknet-signers = { version = "0.1.0", path = "../starknet-signers" }
tokio = { version = "1.15.0", features = ["full"] }
