[package]
name = "starknet-core-derive"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Procedural macros for `starknet-core`
"""
keywords = ["ethereum", "starknet", "web3"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.88"
quote = "1.0.37"
syn = "2.0.15"

[features]
default = []
import_from_starknet = []

[lints]
workspace = true
