[package]
name = "starknet-core"
version = "0.11.1"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Core structures for the starknet crate
"""
keywords = ["ethereum", "starknet", "web3"]
exclude = ["test-data/**"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-crypto = { version = "0.7.0", path = "../starknet-crypto", default-features = false, features = ["alloc"] }
base64 = { version = "0.21.0", default-features = false, features = ["alloc"] }
crypto-bigint = { version = "0.5.1", default-features = false }
flate2 = { version = "1.0.25", optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false, features = ["alloc", "raw_value"] }
serde_json_pythonic = { version = "0.1.2", default-features = false, features = ["alloc", "raw_value"] }
serde_with = { version = "2.3.2", default-features = false, features = ["alloc", "macros"] }
sha3 = { version = "0.10.7", default-features = false }
starknet-types-core = { version = "0.1.3", default-features = false, features = ["curve", "serde", "num-traits"] }

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
hex-literal = "0.4.1"
starknet-core = { path = ".", features = ["no_unknown_fields"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"

[features]
default = ["std"]
std = ["dep:flate2", "starknet-crypto/std", "starknet-types-core/std"]
no_unknown_fields = []

[[bench]]
name = "cairo0_class_hash"
harness = false

[[bench]]
name = "sierra_class_hash"
harness = false
