[package]
name = "starknet-core"
version = "0.16.0-rc.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Core structures for the starknet crate
"""
keywords = ["ethereum", "starknet", "web3"]
exclude = ["test-data/**"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
starknet-crypto = { version = "0.7.4", path = "../starknet-crypto", default-features = false, features = ["alloc"] }
starknet-core-derive = { version = "0.1.0", path = "../starknet-core-derive" }
base64 = { version = "0.21.0", default-features = false, features = ["alloc"] }
crypto-bigint = { version = "0.5.1", default-features = false }
flate2 = { version = "1.0.25", optional = true }
foldhash = { version = "0.1.4", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
indexmap = { version = "2.7.0", default-features = false, features = ["serde"] }
num-traits = { version = "0.2.19", default-features = false }
serde = { version = "1.0.160", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false, features = ["alloc", "raw_value"] }
serde_json_pythonic = { version = "0.1.2", default-features = false, features = ["alloc", "raw_value"] }
serde_with = { version = "3.9.0", default-features = false, features = ["alloc", "macros"] }
sha3 = { version = "0.10.7", default-features = false }
starknet-types-core = { version = "0.1.7", default-features = false, features = ["curve", "serde", "num-traits"] }

[dev-dependencies]
bincode = "1.3.3"
criterion = { version = "0.4.0", default-features = false }
hex-literal = "0.4.1"
starknet-core = { path = ".", features = ["no_unknown_fields"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = ["std"]
std = ["dep:flate2", "starknet-crypto/std", "starknet-types-core/std", "indexmap/std"]
no_unknown_fields = []

[[bench]]
name = "cairo0_class_hash"
harness = false

[[bench]]
name = "sierra_class_hash"
harness = false

[lints]
workspace = true
