[package]
name = "starknet-crypto-codegen"
version = "0.3.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Codegen macros for `starknet-crypto`
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]

[lib]
proc-macro = true

[dependencies]
starknet-curve = { version = "0.2.1", path = "../starknet-curve" }
starknet-ff = { version = "0.3.1", path = "../starknet-ff", default-features = false }
syn = { version = "1.0.96", default-features = false }
