[package]
name = "starknet-crypto-codegen"
version = "0.4.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Codegen macros for `starknet-crypto`
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]

[lib]
proc-macro = true

[dependencies]
starknet-curve = { version = "0.5.0", path = "../starknet-curve" }
syn = "2.0.55"
starknet-types-core = { version = "0.1.3", default-features = false, features = ["curve"] }

[lints]
workspace = true
