[package]
name = "starknet-crypto"
version = "0.6.1"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Low-level cryptography utilities for Starknet
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]
exclude = ["test-data/**"]

[dependencies]
starknet-crypto-codegen = { version = "0.3.2", path = "../starknet-crypto-codegen" }
starknet-curve = { version = "0.4.0", path = "../starknet-curve" }
starknet-ff = { version = "0.3.5", path = "../starknet-ff", default-features = false }
crypto-bigint = { version = "0.5.1", default-features = false, features = ["generic-array", "zeroize"] }
hmac = { version = "0.12.1", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
num-integer = { version = "0.1.45", default-features = false }
num-traits = { version = "0.2.15", default-features = false }
rfc6979 = { version = "0.4.0", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
zeroize = { version = "1.6.0", default-features = false }
hex = { version = "0.4.3", default-features = false, optional = true }

[features]
default = ["std", "signature-display"]
std = []
alloc = ["hex?/alloc"]
signature-display = ["dep:hex", "alloc"]

[dev-dependencies]
criterion = { version = "0.4.0", default-features = false }
hex = "0.4.3"
hex-literal = "0.4.1"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"

[[bench]]
name = "pedersen_hash"
harness = false

[[bench]]
name = "poseidon_hash"
harness = false

[[bench]]
name = "ecdsa_get_public_key"
harness = false

[[bench]]
name = "ecdsa_sign"
harness = false

[[bench]]
name = "ecdsa_verify"
harness = false

[[bench]]
name = "ecdsa_recover"
harness = false

[[bench]]
name = "rfc6979_generate_k"
harness = false
