[package]
name = "starknet-curve"
version = "0.3.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Stark curve
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]

[dependencies]
starknet-ff = { version = "0.3.2", path = "../starknet-ff", default-features = false }

[features]
bigdecimal = ["starknet-ff/bigdecimal"]
