[package]
name = "starknet-curve"
version = "0.5.1"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Stark curve
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]

[dependencies]
starknet-types-core = { version = "0.1.7", default-features = false, features = ["curve"] }

[lints]
workspace = true
