[package]
name = "starknet-ff"
version = "0.2.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Starknet field element type
"""
keywords = ["ethereum", "starknet", "web3"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ark-ff = {version = "0.3.0", default-features = false}
ark-std = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0",  default-features = false }
bigdecimal = { version = "0.3.0", optional = true, default-features = false }
crypto-bigint = {version = "0.4.9", default-features = false}
hex = {version = "0.4.3", default-features = false}
num-bigint = { version = "0.4.3", optional = true }
serde = "1.0.152"
thiserror = "1.0.30"
no-std-compat = { version = "0.4.1", features = [
    "alloc",
    "compat_macros",
    "std",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.3", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.29"

[features]
default = ["bigdecimal"]
bigdecimal = ["dep:bigdecimal", "dep:num-bigint"]
std = [ "no-std-compat/std", "ark-std/std", "ark-serialize/std" ]
