[package]
name = "starknet-ff"
version = "0.3.2"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Starknet field element type
"""
keywords = ["ethereum", "starknet", "web3", "no_std"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
ark-ff = { version = "0.4.2", default-features = false }
crypto-bigint = { version = "0.5.1", default-features = false }
hex = { version = "0.4.3", default-features = false }
serde = { version = "1.0.160", optional = true, default-features = false }
bigdecimal = { version = "0.3.0", optional = true }
num-bigint = { version = "0.4.3", optional = true, default-features = false }


[features]
default = ["std", "serde"]
std = []
alloc = ["serde?/alloc"]
serde = ["dep:serde", "alloc", "bigdecimal?/serde"]
bigdecimal = ["std", "dep:bigdecimal", "dep:num-bigint"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"
