[package]
name = "starknet-id"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
starknet-core = { version = "0.2.0", path = "../starknet-core" }
num-traits = "0.2.14"

[dev-dependencies]
tokio = { version = "1.15.0", features = ["full"] }
