[package]
name = "starknet-macros"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Procedural macros for `starknet`
"""
keywords = ["ethereum", "starknet", "web3"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
starknet-core = { version = "0.2.0", path = "../starknet-core" }
syn = "1.0.96"

[features]
default = []
use_imported_type = []
