[package]
name = "starknet-macros"
version = "0.1.3"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Procedural macros for `starknet`
"""
keywords = ["ethereum", "starknet", "web3"]

[lib]
proc-macro = true

[dependencies]
starknet-core = { version = "0.6.0", path = "../starknet-core" }
starknet-contract = { version = "0.5.0", path = "../starknet-contract" }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0.15"
serde_json = "1.0.74"

[features]
default = []
use_imported_type = []
