[package]
name = "starknet-providers"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Provider implementations for the starknet crate
"""

[dependencies]
starknet-core = { version = "0.1.0", path = "../starknet-core" }
async-trait = "0.1.52"
url = "2.2.2"
reqwest = { version = "0.11.8" }
thiserror = "1.0.30"
serde_json = "1.0.74"
