[package]
name = "starknet-providers"
version = "0.2.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Provider implementations for the starknet crate
"""
keywords = ["ethereum", "starknet", "web3"]

[dependencies]
starknet-core = { version = "0.2.0", path = "../starknet-core" }
async-trait = "0.1.52"
auto_impl = "0.5.0"
url = "2.2.2"
reqwest = { version = "0.11.8", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.30"
serde = "1.0.133"
serde_json = "1.0.74"
serde_with = "1.12.0"

[dev-dependencies]
flate2 = "1.0.22"
tokio = { version = "1.15.0", features = ["full"] }
