[package]
name = "starknet-providers"
version = "0.2.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Provider implementations for the starknet crate
"""
keywords = ["ethereum", "starknet", "web3"]

[dependencies]
starknet-core = { version = "0.2.0", path = "../starknet-core" }
async-trait = "0.1.68"
auto_impl = "1.0.1"
flate2 = "1.0.25"
url = "2.3.1"
reqwest = { version = "0.11.16", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "1.0.40"
serde = "1.0.160"
serde_json = "1.0.96"
serde_with = "2.3.2"

[dev-dependencies]
starknet-providers = { path = ".", features = ["no_unknown_fields"] }
tokio = { version = "1.27.0", features = ["full"] }

[features]
default = []
no_unknown_fields = []
