[package]
name = "starknet-signers"
version = "0.1.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Starknet signer implementations
"""
keywords = ["ethereum", "starknet", "web3"]

[dependencies]
starknet-core = { version = "0.2.0", path = "../starknet-core" }
starknet-crypto = { version = "0.5.1", path = "../starknet-crypto" }
async-trait = "0.1.68"
thiserror = "1.0.40"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"
