[package]
name = "starknet-signers"
version = "0.12.0"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/xJonathanLEI/starknet-rs"
homepage = "https://starknet.rs/"
description = """
Starknet signer implementations
"""
keywords = ["ethereum", "starknet", "web3"]

[dependencies]
starknet-core = { version = "0.14.0", path = "../starknet-core" }
starknet-crypto = { version = "0.7.4", path = "../starknet-crypto" }
async-trait = "0.1.68"
auto_impl = "1.0.1"
thiserror = "1.0.40"
crypto-bigint = { version = "0.5.1", default-features = false }
rand = { version = "0.8.5", features = ["std_rng"] }
coins-bip32 = { version = "0.11.1", optional = true }
coins-ledger = { version = "0.12.0", default-features = false, optional = true }
semver = { version = "1.0.23", optional = true }
zeroize = { version = "1.8.1", features = ["derive", "zeroize_derive"] }

[target.'cfg(not(all(target_arch = "wasm32", target_os = "unknown")))'.dependencies]
eth-keystore = { version = "0.5.0", default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.9", features = ["js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
starknet-signers = { path = ".", features = ["ledger"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.160", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.50"

[features]
default = []

ledger = ["coins-bip32", "coins-ledger", "semver"]

[lints]
workspace = true
